--- a/koffie.html
+++ b/koffie.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+      </head>
 <body>
+    <div class="center-content">
     <img src="koffie_vlek.png" alt="Coffee Stain" style="width: 1000px; height: 1000px;">
+    <br>
+    <a href="https://youtu.be/dQw4w9WgXcQ?t=43" class="my-button">Klik hier voor een gratis shirt met koffievlek!</a>
+    </div>
 </body>
 </html>
